--- a/Mossalji/Mossalji.WPF/Properties/Resources.resx
+++ b/Mossalji/Mossalji.WPF/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -109,9 +112,63 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Active" xml:space="preserve">
+    <value>تحت التنفيذ</value>
+  </data>
+  <data name="Canceled" xml:space="preserve">
+    <value>ملغي</value>
+  </data>
+  <data name="Completed" xml:space="preserve">
+    <value>تم التنفيذ</value>
+  </data>
+  <data name="External" xml:space="preserve">
+    <value>سائق خارجي</value>
+  </data>
+  <data name="ExternalCar" xml:space="preserve">
+    <value> سيارة خارجية</value>
+  </data>
+  <data name="Inc" xml:space="preserve">
+    <value>شركات قائمة</value>
+  </data>
+  <data name="Internal" xml:space="preserve">
+    <value>سائق الشركة</value>
+  </data>
+  <data name="InternalCar" xml:space="preserve">
+    <value>سيارة الشركة</value>
+  </data>
+  <data name="OnlineInc" xml:space="preserve">
+    <value>شركات اونلاين</value>
+  </data>
+  <data name="Others" xml:space="preserve">
+    <value>اخرى</value>
+  </data>
+  <data name="Paid" xml:space="preserve">
+    <value>تم السداد</value>
+  </data>
+  <data name="PendingApp" xml:space="preserve">
+    <value>معلق مع موصلجي</value>
+  </data>
+  <data name="PendingDriver" xml:space="preserve">
+    <value>معلق مع السائق</value>
+  </data>
+  <data name="Personal" xml:space="preserve">
+    <value>فردي</value>
+  </data>
+  <data name="Resturants" xml:space="preserve">
+    <value>مطاعم</value>
+  </data>
+  <data name="Shops" xml:space="preserve">
+    <value>محال تجارية</value>
+  </data>
+  <data name="WesternUnion" xml:space="preserve">
+    <value>WesternUnion</value>
+  </data>
+  <data name="ZainCash" xml:space="preserve">
+    <value>Zain Cash</value>
+  </data>
 </root>
